tdf#125338 Do not export macros when saving as .docx

Docx files that have macros should be saved as .docm. Now displays a
warning that macros won't be saved if exporting a .docm as a .docx and
doesn't export them.

Change-Id: I178855baa6c0a7d32fd9b00c83a817230b33a1a1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144197
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
(cherry picked from commit cbca5617387aaa39c9ee86272166bb3df7874b25)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144811
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>