sw/source/filter/ww8/docxexportfilter.cxx
@@ -63,6 +63,37 @@ bool DocxExportFilter::exportDocument()
         pViewShell->GetPostItMgr()->UpdateDataOnActiveSidebarWin();
     }
 
+    OUString aFilterName;
+    auto& rMediaDescriptor = getMediaDescriptor();
+    rMediaDescriptor[utl::MediaDescriptor::PROP_FILTERNAME] >>= aFilterName;
+    bool bDocm = aFilterName.endsWith("VBA");
+
+    if (!bDocm)
+    {
+        // Check whether application is in headless mode
+        if (!Application::IsHeadlessModeEnabled())
+        {
+            uno::Reference<document::XStorageBasedDocument> xStorageBasedDocument(
+                pDoc->GetDocShell()->GetBaseModel(), uno::UNO_QUERY);
+            if (xStorageBasedDocument.is())
+            {
+                uno::Reference<embed::XStorage> xDocumentStorage =
+                    xStorageBasedDocument->getDocumentStorage();
+                if (xDocumentStorage.is() && xDocumentStorage->hasByName(u"_MS_VBA_Macros"))
+                {
+                    // Let user know that macros won't be saved in this format
+                    std::unique_ptr<weld::MessageDialog> xBox(Application::CreateMessageDialog(
+                            nullptr,
+                            VclMessageType::Warning, VclButtonsType::OkCancel,
+                            SwResId(STR_CANT_SAVE_MACROS))
+                    );
+                    if (xBox->run() == RET_CANCEL)
+                        return false;
+                }
+            }
+        }
+    }
+
     // get SwPaM*
     // FIXME so far we get SwPaM for the entire document; probably we should
     // be able to output just the selection as well - though no idea how to
@@ -74,10 +105,6 @@ bool DocxExportFilter::exportDocument()
     std::shared_ptr<SwUnoCursor> pCurPam(pDoc->CreateUnoCursor(*aPam.End(), false));
     pCurPam->SetMark();
     *pCurPam->GetPoint() = *aPam.Start();
-
-    OUString aFilterName;
-    getMediaDescriptor()[utl::MediaDescriptor::PROP_FILTERNAME] >>= aFilterName;
-    bool bDocm = aFilterName.endsWith("VBA");
 
     // export the document
     // (in a separate block so that it's destructed before the commit)
